# journal_2026

./: .gitattributes  .gitignore  Dockerfile  README.md  dataset.h5  pyproject.toml
.github/workflows/: dockerhub-push.yml
src/csi_vae/: launcher.py  launcher_settings.py  main.py  messages_queue.py  queue.py  settings.py  submitter.py  trial_submitter.py
src/csi_vae/aws/: __init__.py  messages_queue.py  model_saver.py  retry.py  trial_submitter.py
src/csi_vae/launcher/: __init__.py  launcher.py  launcher_settings.py
src/csi_vae/trial/: __init__.py  early_stopping.py  evaluator.py  handlers.py  queue_handler.py  trial.py  trial_settings.py
src/csi_vae/trial/classifier/: __init__.py  basic_nn.py  trainer.py
src/csi_vae/trial/dataset/: __init__.py  antenna_dataset.py  csi_dataset.py  load.py  multi_antenna.py  single_antenna.py
src/csi_vae/trial/fusion/: __init__.py  delayed.py  trainer.py
src/csi_vae/trial/vae/: __init__.py  collapse_detector.py  gaussian.py  kl_annealer.py  loss.py  parameters.py  trainer.py
src/journal_2026/: launcher.py  settings.py  trial.py
src/journal_2026/trial/: trial.py  trial_settings.py
tests/: test_launcher.py  test_messages_queue.py  test_trial.py  test_trial_submitter.py
