[project]
name = "csi-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.60",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
launcher = [
    "optuna>=4.7.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
launch = "csi_vae.launcher:run_launcher"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean-typed keyword argument in function definition
    "FBT003",  # Boolean-typed variable annotation
    "D203",    # Incorrect blank line before class
    "D213",    # Multi line summary second line
    "PLR0913", # Too many arguments in function definition
    "TC001",
    "TC002",
    "TC003",
    "UP037",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused argument
    "ARG002",  # Unused method argument
    "S101",    # Use of assert
    "ANN",     # Missing type annotations
    "D",       # Docstrings not needed in tests
    "SLF001",  # Private member acces
    "PLR2004", # Magic value comparisons
]